# raskumarubot

./: .env.example  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  ruff.toml  run_polling.py
.github/workflows/: linters.yml
app/: main.py
app/api/: __init__.py
app/api/middlewares/: telegram_auth.py  webapp_header.py
app/api/routes/: __init__.py  health.py  webhook.py
app/api/routes/v1/: __init__.py  gif_search.py  ping_endpoint.py
app/api/schemas/: health.py  ping.py  text_to_image_prompt.py  webapp_data.py
app/bot/: __init__.py
app/bot/handlers/: __init__.py  error.py  gif_search.py  help.py  start.py
app/bot/keyboards/: inline.py  reply.py
app/bot/middlewares/: __init__.py  i18n_middleware.py  user_block_check.py
app/bot/middlewares/wlui/: __init__.py  formatter.py  l_filter.py  middleware.py
app/bot/states/: default_state_group.py  image_edit.py  image_to_text.py
app/bot/utils/: texts.py
app/configs/: env_configs_models.py  settings.py
app/core/: logging.py  redis.py  service.py
app/core/configs/: env_configs_models.py
app/core/db/: __init__.py  models.py
app/core/setup/: local_register.py
app/core/utils/: date_formatting.py
app/core/wlui/: formatter.py  l_filter.py  middleware.py
app/locales/en/LC_MESSAGES/: messages.po
app/locales/ru/LC_MESSAGES/: messages.po
scripts/: docker-entrypoint.dev.sh
tests/: test_gif_search.py  test_health.py  test_middlewares.py  test_ping.py  test_webhook.py
